recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:8: error: not found: value lenght
	avance(lenght)
               ^